--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "react",
-  "version": "1.0.0",
+  "name": "ethereum-voting_reactapp",
+  "version": "0.1.0",
+  "private": true,
   "description": "React example starter project",
   "keywords": [
     "react",
@@ -17,8 +18,7 @@
     "bootstrap": "4.4.1"
   },
   "devDependencies": {
-    "typescript": "3.3.3",
-    "webpack": "^4.42.0"
+    "typescript": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
