--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "4.4.1",
+    "ethereumjs-tx": "^2.1.2",
+    "node-gyp": "^7.1.2",
+    "node-libs-browser": "^2.2.1",
     "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-scripts": "3.0.1",
-    "react-responsive-modal": "latest",
-    "reactstrap": "5.0.0-beta",
     "react-bootstrap": "1.0.0-beta.16",
-    "bootstrap": "4.4.1"
+    "react-dom": "16.12.0",
+    "react-responsive-modal": "latest",
+    "react-scripts": "3.0.1",
+    "reactstrap": "5.0.0-beta",
+    "solc": "^0.4.24",
+    "web3": "^2.0.0-alpha.1"
   },
   "devDependencies": {
     "typescript": "3.3.3"
